Fix(SectionHeader): Set Alignment via scss

--- a/styles/layouts/SectionHeader.module.scss
+++ b/styles/layouts/SectionHeader.module.scss
@@ -28,3 +28,14 @@
     @apply bg-color-1;
   }
 }
+
+.rightAligned {
+  @apply justify-end;
+}
+
+.leftAligned {
+  @apply justify-start;
+}
+
+.middleAligned {
+  @apply justify-center; }
